# Guardian

./: .gitignore  README.md  pyproject.toml  template.entities.json  template.env
src/guardian/: guardian.py
src/guardian/core/: cli.py  logging.py
src/guardian/db/: sqlite.py
src/guardian/integrations/: virustotal.py
src/guardian/runtime/: notifications.py  query.py
tests/: conftest.py  test_query_app.py  test_sqlite_manager.py
