[project]
name = "Guardian"
version = "0.1.0"
description = ""
authors = [
    {name = "Maurice Fielenbach",email = "info@hexastrike.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "vt-py (>=0.20.0,<0.21.0)",
    "pytest (>=8.3.5)"
]

[tool.poetry]
packages = [{include = "guardian", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
guardian = "guardian.guardian:main"